kubernetes/traefik/addl/dashboard/gateway-simple.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik-system
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure
      protocol: HTTPS
      port: 8443
      hostname: "*.local.127.0.0.1.sslip.io"
      tls:
        mode: Terminate
        certificateRefs:
          - name: san-cert-local-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              allow-gateway: "true"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard-route
  namespace: traefik-system
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - "t.local.127.0.0.1.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: traefik-dashboard
          port: 8080
