kubernetes/traefik/addl/dashboard/ingress-auth.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
kind: Middleware
apiVersion: traefik.io/v1alpha1
metadata:
  name: traefik-dashboard-auth
  namespace: traefik-system
spec:
  basicAuth:
    secret: traefik-dashboard-secret

---
kind: Middleware
apiVersion: traefik.io/v1alpha1
metadata:
  name: traefik-dashboard-rewrite
  namespace: traefik-system
spec:
  addPrefix:
    prefix: /dashboard

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-system-traefik-dashboard-auth@kubernetescrd
    # cert-manager.io/cluster-issuer: selfsigned
spec:
  rules:
  - host: t.local.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - t.local.127.0.0.1.sslip.io
    secretName: san-cert-local-secret
